Update oslo.vmware to 2.19.0
Change-Id: I55620f32d06e0524d5d6809e0c47622fcf35ebea
Depends-on: Iccba959d7cc2fe1be7abd983b201e6c54dfc8fa0

--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -1,14 +1,12 @@
 %global pypi_name oslo.vmware
 Name:           {{ py2name('oslo.vmware') }}
-Version:        2.18.0
+Version:        2.19.0
 Release:        0
 Summary:        Oslo VMware library for OpenStack projects
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://launchpad.net/oslo.vmware
 Source0:        https://pypi.io/packages/source/o/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
-#FIXME(jpena): remove patch once it is fixed upstream (https://review.openstack.org/355851)
-Patch0001:      0001-Make-the-mock-call-in-MemoryCacheTest-forward-compat.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Babel') }}
 BuildRequires:  {{ py2pkg('ddt') }}
@@ -62,7 +60,7 @@ Requires:       %{name} = %{version}
 Documentation for OpenStack common VMware library.
 
 %prep
-%autosetup -n %{pypi_name}-%{version} -p1
+%autosetup -n %{pypi_name}-%{version}
 %py_req_cleanup
 
 %build
