--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -7,6 +7,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
+# from https://review.openstack.org/#/c/453245/
+Patch1:         0001-Remove-deprecated-oslo.messaging-aliases-parameter.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
 BuildRequires:  {{ py2pkg('WebTest') }}
@@ -61,7 +63,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for Middleware for OpenStack Identity.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 
 %build
@@ -76,6 +78,7 @@ Documentation for Middleware for OpenStack Identity.
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %check
+export PYTHONWARNINGS="ignore"
 %{__python2} setup.py testr
 
 %files
