--- a/openstack/renderspec/renderspec.spec.j2
+++ b/openstack/renderspec/renderspec.spec.j2
@@ -1,6 +1,6 @@
 %global sname renderspec
 Name:           {{ py2name('renderspec') }}
-Version:        1.3.0
+Version:        1.4.0
 Release:        0
 Summary:        Generate spec files from Jinja2 templates
 License:        {{ license('Apache-2.0') }}
@@ -14,6 +14,7 @@ Requires:       {{ py2pkg('Jinja2') }}
 Requires:       {{ py2pkg('PyYAML') }}
 Requires:       {{ py2pkg('packaging') }}
 Requires:       {{ py2pkg('pymod2pkg') }}
+Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
 
 %description
