--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -1,3 +1,7 @@
+{% set pypi_name = 'monasca-notification' %}
+{% set upstream_version = upstream_version('1.7.0') %}
+{% set rpm_release = '1' %}
+
 %global sname   monasca-notification
 
 %define username    monasca-notification
@@ -6,9 +10,9 @@
 %define notification_conf_dir %{_sysconfdir}/%{sname}
 %define notification_log_dir /var/log/%{sname}
 
-Name:           {{ py2name('monasca-notification') }}
-Version:        1.7.0
-Release:        0
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Notification engine sends notifications based on alarm transitions
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
