--- a/openstack/monasca-statsd/monasca-statsd.spec.j2
+++ b/openstack/monasca-statsd/monasca-statsd.spec.j2
@@ -1,7 +1,11 @@
-%global sname monasca-statsd
-Name:           {{ py2name('monasca-statsd') }}
-Version:        1.5.0
-Release:        0
+{% set pypi_name = 'monasca-statsd' %}
+{% set upstream_version = upstream_version('1.5.0') %}
+{% set rpm_release = '1' %}
+
+%global sname {{ pypi_name }}
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Python Statsd library for sending statsd messages via the Monasca Agent
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
