Handle versions for monasca-* services properly
We want to use the proper functions to handle the versions on SUSE and
Fedora correct.

Change-Id: I51ad1c54b8b2dfd1133f3860b39a62b185d77362

--- a/openstack/monasca-persister/monasca-persister.spec.j2
+++ b/openstack/monasca-persister/monasca-persister.spec.j2
@@ -1,7 +1,11 @@
-%global sname monasca-persister
-Name:           {{ py2name('monasca-persister') }}
-Version:        1.4.0
-Release:        0
+{% set pypi_name = 'monasca-persister' %}
+{% set upstream_version = upstream_version('1.4.0') %}
+{% set rpm_release = '1' %}
+
+%global sname {{ pypi_name }}
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Consumes metrics and alarm state transitions from message queue and stores them in database
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
