--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -5,14 +5,8 @@
 
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
-%global http_confdir %{_sysconfdir}/httpd/conf.d
-%global http_user apache
-%global http_group apache
 %global http_dashboard_dir %{_datarootdir}/openstack-dashboard
 %else
-%global http_confdir %{_sysconfdir}/apache2/conf.d
-%global http_user wwwrun
-%global http_group www
 %global http_dashboard_dir /srv/www/openstack-dashboard
 %endif
 
@@ -238,17 +232,17 @@ rm %{buildroot}%{http_dashboard_dir}/openstack_dashboard/local/*secret_key_store
 %endif
 rm -f %{buildroot}%{http_dashboard_dir}/openstack_dashboard/.eslintrc
 
-install -D -m 644 %{SOURCE2} %{buildroot}%{http_confdir}/openstack-dashboard.conf.sample
+install -D -m 644 %{SOURCE2} %{buildroot}%{apache_conf_dir}/openstack-dashboard.conf.sample
 
 %files
 %doc README.rst
 %{http_dashboard_dir}
-%attr(0750, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local
-%attr(0640, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local/__init__.py*
-%config(noreplace) %attr(0640, %{http_user}, %{http_group}) %{http_dashboard_dir}/openstack_dashboard/local/local_settings.py*
-%attr(0770, root, %{http_group}) %{http_dashboard_dir}/static/
-%attr(0770, root, %{http_group}) %{http_dashboard_dir}/media/
-%{http_confdir}/openstack-dashboard.conf.sample
+%attr(0750, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local
+%attr(0640, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local/__init__.py*
+%config(noreplace) %attr(0640, %{apache_user}, %{apache_group}) %{http_dashboard_dir}/openstack_dashboard/local/local_settings.py*
+%attr(0770, root, %{apache_group}) %{http_dashboard_dir}/static/
+%attr(0770, root, %{apache_group}) %{http_dashboard_dir}/media/
+%{apache_conf_dir}/openstack-dashboard.conf.sample
 
 %files -n {{ py2pkg('horizon') }}
 %license LICENSE
