Fix horizon package name
The sub package name is python-horizon, not openstack-horizon (which is
now the main package name).
Also the BuildRequire for monasca-ui is fixed.

Change-Id: Ia6eee41294e3105fe8e469144d07417c21b7220d

--- a/openstack/monasca-ui/monasca-ui.spec.j2
+++ b/openstack/monasca-ui/monasca-ui.spec.j2
@@ -21,7 +21,7 @@ Url:            https://wiki.openstack.org/wiki/Monasca
 Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  fdupes
-BuildRequires:  openstack-horizon
+BuildRequires:  {{ py2pkg('horizon') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-monascaclient') }}
 Requires:       {{ py2pkg('horizon-plugin-monasca-ui') }} = %{version}
