openstack-monasca-agent: various fixes
* Fixed enabling-disabling systemd service
* Fixed permissions
* Create rundir for tmpfiles (we need this because
  /run is mounted as tmpfs sometimes).
* Write pid file in systemd service.
* Create /sbin/rcopenstack-monasca-agent symlink on SUSE
* Restricted sudoers file to just the privileges actually required
  by checks.

(cherry picked from commit 5cccfc040bbc73e642f3a84125dc43bb62ad3d4f)

Depends-On: I827b2b1f80866855c336a464d78ddfbaaeb0133b
Change-Id: I49a82805491235aa118b3d8482330b97dc232c01
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -30,6 +30,7 @@ Url:            https://wiki.openstack.org/wiki/Monasca
 Source0:        {{ source }}
 Source1:        %{name}-sudoers
 Source2:        %{name}.service
+Source3:        openstack-monasca-agent.tmpfiles
 BuildRequires:  openstack-macros
 
 %if 0%{?suse_version}
@@ -125,32 +126,53 @@ fi
 %{__install} -d -m 750 %{buildroot}%{_exec_prefix}/lib/monasca/agent/custom_detect.d
 
 # /var
-%{__install} -d -m 750  %{buildroot}%{_localstatedir}/log/%{sname}
-%{__install} -d -m 700  %{buildroot}%{_localstatedir}/run/%{sname}
+install -d -m 750  %{buildroot}%{_localstatedir}/log/%{sname}
 
 # sudoers configuration
 %{__install} -D -m 440 %{SOURCE1} %{buildroot}%{_sysconfdir}/sudoers.d/%{name}
 
 # systemd unit file
-%{__install} -D -m 644 %{SOURCE2} %{buildroot}%{_unitdir}/%{name}.service
+install -D -m 644 %{SOURCE2} %{buildroot}%{_unitdir}/%{name}.service
+%if 0%{?suse_version}
+mkdir -p %{buildroot}%{_sbindir}
+ln -sr %{buildroot}%{_sbindir}/service %{buildroot}%{_sbindir}/rc%{name}
+%endif
+
+# systemd tmpfile
+install -D -m 644 %{SOURCE3} %{buildroot}/%{_tmpfilesdir}/openstack-monasca-agent.conf
 
 %pre
 # create user and groups
 %openstack_pre_user_group_create %{username} %{groupname}
+
+%post
+%tmpfiles_create %{_tmpfilesdir}/openstack-monasca-agent.conf
+%systemd_post %{name}.service
+
+%preun
+%systemd_preun %{name}.service
+
+%postun
+%systemd_postun %{name}.service
 
 %check
 find . -type f -name *.pyc -delete
 PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 
 %files
-%defattr(-, %{username}, %{groupname})
 %dir %{_sysconfdir}/monasca
+%dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent
+%dir %attr(0750, %{username}, %{groupname}) %{_sysconfdir}/monasca/agent/conf.d
+%_tmpfilesdir/openstack-monasca-agent.conf
 %config %{_sysconfdir}/monasca/agent
 %config %{_sysconfdir}/sudoers.d/%{name}
 %dir %{_exec_prefix}/lib/monasca
 %{_exec_prefix}/lib/monasca/agent
 %dir %{_localstatedir}/log/%{sname}
 %{_unitdir}/%{name}.service
+%if 0%{?suse_version}
+%{_sbindir}/rc%{name}
+%endif
 
 %files -n python-%{sname}
 %doc README.md
