--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -11,7 +11,8 @@
 #  under the License.
 
 {% set pypi_name = 'monasca-agent' %}
-{% set upstream_version = upstream_version('1.8.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-agent/monasca-agent-stable-ocata.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -26,7 +27,7 @@ Summary:        OpenStack Monasca metrics agent
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 Source1:        %{name}-sudoers
 Source2:        %{name}.service
 BuildRequires:  openstack-macros
@@ -103,7 +104,7 @@ sending them to the Monasca API.
 This package contains monasca-agent Python module.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
