--- a/openstack/monasca-common/monasca-common.spec.j2
+++ b/openstack/monasca-common/monasca-common.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-common' %}
-{% set upstream_version = upstream_version('1.5.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-common/monasca-common-stable-ocata.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -10,7 +11,7 @@ Summary:        Reusable code for building monitoring related services.
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('nose') }}
 BuildRequires:  {{ py2pkg('mox') }}
@@ -29,19 +30,13 @@ Requires:       {{ py2pkg('kazoo') }}
 Requires:       {{ py2pkg('PyMySQL') }}
 Requires:       {{ py2pkg('ujson') }}
 BuildArch:      noarch
-%if "%{version}" != "1.5.0"
-# Currently monasca vendored kafka and will only eventually
-# switch to pykafka. atm it is not used
-BuildRequires:  {{ py2pkg('pykafka') }}
-Requires:       {{ py2pkg('pykafka') }}
-%endif
 
 %description
 Collection of sub-projects containing reusable application and
 platform code for building monitoring related services.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
