--- a/openstack/monasca-log-api/monasca-log-api.spec.j2
+++ b/openstack/monasca-log-api/monasca-log-api.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-log-api' %}
-{% set upstream_version = upstream_version('1.4.1') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-log-api/monasca-log-api-stable-ocata.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %define sname           {{ pypi_name }}
@@ -12,7 +13,7 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
 
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 Source1:        %{name}.conf
 Source3:        %{name}-wsgi.conf
 
@@ -72,7 +73,7 @@ monasca-log-api is a RESTful API server receiving logs from the deployed
 log agents.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
