--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-notification' %}
-{% set upstream_version = upstream_version('1.7.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-notification/monasca-notification-stable-ocata.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname   monasca-notification
@@ -17,7 +18,7 @@ Summary:        Notification engine sends notifications based on alarm transitio
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 Source1:        %{sname}.service
 Source2:        %{sname}.yaml
 BuildRequires:  openstack-macros
@@ -70,7 +71,7 @@ whenever a new process joins or leaves the working set.
 This package contains the core Python module of Monasca-notification
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
