monasca-api: Install /var/lib/monasca-api
This fixes a problem when starting monasca-api under apache2:

     No such file or directory: mod_wsgi: Unable to change working
     directory to home directory '/var/lib/monasca-api'

Change-Id: Iedf579e8a5a856d4f928d4ed050c6a1ffcdc31fe

--- a/openstack/monasca-api/monasca-api.spec.j2
+++ b/openstack/monasca-api/monasca-api.spec.j2
@@ -109,6 +109,7 @@ and managing monitoring related resources.
 
 # create all necessary directories
 %{__install} -d -m 755 %{buildroot}%{_sysconfdir}/monasca
+%{__install} -d -m 755 %{buildroot}%{_var}/lib/%{component}
 %{__install} -d -m 755 %{buildroot}%{_var}/log/%{component}
 %{__install} -d -m 755 %{buildroot}%{apache_site_dir}
 
@@ -153,6 +154,7 @@ fi
 %{_bindir}/monasca-api-wsgi.py
 
 %dir %attr(-, root, monasca) %{_sysconfdir}/monasca
+%dir %attr(0750, monasca-api, monasca) %{_var}/lib/%{component}
 %dir %attr(-, root, monasca) %{_var}/log/%{component}
 
 %config(noreplace) %attr(0640, root, monasca) %{_sysconfdir}/monasca/api-config.conf
